# FlashTrack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: flashtrack_m.yaml  flashtrack_m05x.yaml  flashtrack_m15x.yaml  flashtrack_m_kd.yaml  flashtrack_m_lora.yaml
docker/: Dockerfile  docker-compose.yml
docs/: FAQ.md  Home.md  Installation.md  LoRA-Fine-Tuning.md  Models.md  Quick-Start.md  Trackers.md  Training.md
examples/: benchmark_model.py  export_onnx.py  track_video.py  train_reid.py  train_with_lora.py
flashtrack/: __init__.py  cli.py  registry.py
flashtrack/analytics/: __init__.py  benchmark.py  hota.py  profiler.py
flashtrack/cfg/: __init__.py  config.py
flashtrack/data/: __init__.py  dataloader.py  dataset.py  prepare.py  transforms.py
flashtrack/engine/: __init__.py  callbacks.py  exporter.py  predictor.py  trainer.py  validator.py
flashtrack/losses/: __init__.py  classification_loss.py  kd_loss.py  triplet_loss.py
flashtrack/models/: __init__.py  byte_tracker.py  deepsort_tracker.py  lora.py  sort_tracker.py  tracker.py
flashtrack/models/backbone/: __init__.py  shufflenet.py
flashtrack/models/encoder/: __init__.py  feature_encoder.py
flashtrack/models/head/: __init__.py  reid_head.py
flashtrack/trackers/: __init__.py  bot_sort.py  oc_sort.py
flashtrack/trackers/sot/: __init__.py  ostrack.py
flashtrack/utils/: __init__.py  checkpoint.py  cmc.py  kalman_filter.py  logger.py  metrics.py  torchtune_optim.py  visualization.py
tests/: test_callbacks.py  test_comprehensive.py  test_models.py  test_new_trackers.py  test_registry.py  test_trackers.py
